Started editing the css file , tweaking the html file comtainers and adding images

--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@
            </ul>
          </div>
          <div class="layer-1">
-          <div> This website is awesome </div>
-          <div> rather long information about the website that may have to increase in volume of importance</div>
-          <button> sign up </button>
-          <img src=".images/image" alt="image">
+           <div class="card">
+           
+            <div class="card-h"> GO TOFFEES </div>
+            <div class="card-s"> rather long information about the website that may have to increase in volume of importance</div>
+            <button class="button"> sign up </button>
+           </div> 
+          <img class="img" src="images/download.png" alt="image">
          </div>
           <div class="layer-2">
            <div class="info">
