finished the the thirld layer of the website

--- a/index.html
+++ b/index.html
@@ -25,25 +25,30 @@
            </div> 
           <img class="img" src="images/download.png" alt="image">
          </div>
+          <div class="l2-h" > Everton Legends </div>
           <div class="layer-2">
+            
+            <div class="l2-container">  
            <div class="info">
-           <img src="./images/barberry.png" alt="barberry">
+           <img src="images/richarlidson.jpeg" alt="richarlidson">
            <div class="text">This is a type of plant. We love this one.</div>
           </div>
           <div class="info">
-           <img src="./images/chilli.png" alt="chili">
+           <img src="images/Tim.jpeg" alt="Tim Howard">
            <div class="text">This is another type of plant. Isn't it nice</div>
           </div>
           <div class="info">
-           <img src="./images/pepper.png" alt="pepper">
+           <img src="images/myko.jpeg" alt="myko">
            <div class="text">We have so many plants. Yay plants.</div>
           </div>
            <div class="info">
-            <img src="./images/saffron.png" alt="saffron">
+            <img src="images/Demari.jpeg" alt="Demari Grey">
            <div class="text">I'm running out of things to say about plants.</div>
+           </div>
+          </div>
           </div>
             <div class="layer-3">
-              <div> big long quote yaafafafafafaf </div>
+              <div class="l3"> big long quote yaafafafafafaf </div>
             </div>
           <div class="layer-4">
            <div> call to action</div>
