--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
           </div>
           </div>
             <div class="layer-3">
-              <div class="l3"> big long quote yaafafafafafaf </div>
+              <div class="l3"> "Once Everton has touched you, nothing will be the same" </div>
+              <div class="l3-text"> -Alan Ball</div>
             </div>
           <div class="layer-4">
            <div> call to action</div>
