finished the website layout onto revision

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
            <div class="text">We have so many plants. Yay plants.</div>
           </div>
            <div class="info">
-            <img src="images/Demari.jpeg" alt="Demari Grey">
+            <img src="images/james.jpeg" alt="Demari Grey">
            <div class="text">I'm running out of things to say about plants.</div>
            </div>
           </div>
@@ -52,12 +52,16 @@
               <div class="l3-text"> -Alan Ball</div>
             </div>
           <div class="layer-4">
-           <div> call to action</div>
-           <div> the words and things  </div>
-           <button> sign up </button>
+           <div class="l4-c">
+             <div class="l4-card">
+              <div class="l4-h"> call to action</div>
+              <div class="l4-t"> the words and things  </div>
+             </div>
+            <button> sign up </button>
+           </div>
           </div>
            <div class="footer"> copyright @c the odin project 2021</div>
     </div>
-  </div>
+  </div> 
  </body>
 </html>
