Project has been finished and has been adequately edited

--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 </head>
  <body>
          <div class="header">
-          <div> header logo </div>
+            <img src="images/download.png" alt="everton logo"> 
            <ul>
-            <li> <a href="#"> link one  </a>  </li> 
-            <li> <a href="#"> link two   </a> </li> 
-            <li> <a href="#"> link three </a> </li>      
+            <li> <a href="#"> Tickets</a>  </li> 
+            <li> <a href="#"> FAQ   </a> </li> 
+            <li> <a href="#"> About </a> </li>      
            </ul>
          </div>
          <div class="layer-1">
            <div class="card">
            
             <div class="card-h"> GO TOFFEES </div>
-            <div class="card-s"> rather long information about the website that may have to increase in volume of importance</div>
-            <button class="button"> sign up </button>
+            <div class="card-s"> did you know that everton is one of the most historical football clubs of all time. in fact everton is part of an elite group set of clubs that has not once been relegated.</div>
+            <button class="button"> more info </button>
            </div> 
           <img class="img" src="images/download.png" alt="image">
          </div>
@@ -31,19 +31,19 @@
             <div class="l2-container">  
            <div class="info">
            <img src="images/richarlidson.jpeg" alt="richarlidson">
-           <div class="text">This is a type of plant. We love this one.</div>
+           <div class="text">Best player to touch the everton pitch in recent years</div>
           </div>
           <div class="info">
            <img src="images/Tim.jpeg" alt="Tim Howard">
-           <div class="text">This is another type of plant. Isn't it nice</div>
+           <div class="text">Best goalkeeper that everton has ever had </div>
           </div>
           <div class="info">
            <img src="images/myko.jpeg" alt="myko">
-           <div class="text">We have so many plants. Yay plants.</div>
+           <div class="text">Honestly proboaly the most mediocre player to ever touch their pitch</div>
           </div>
            <div class="info">
             <img src="images/james.jpeg" alt="Demari Grey">
-           <div class="text">I'm running out of things to say about plants.</div>
+           <div class="text">Evertons personal nonce </div>
            </div>
           </div>
           </div>
@@ -54,10 +54,10 @@
           <div class="layer-4">
            <div class="l4-c">
              <div class="l4-card">
-              <div class="l4-h"> call to action</div>
-              <div class="l4-t"> the words and things  </div>
+              <div class="l4-h"> Please by Tickets</div>
+              <div class="l4-t"> Our stadium is hanging by a thread  </div>
              </div>
-            <button> sign up </button>
+            <button> Tickets </button>
            </div>
           </div>
            <div class="footer"> copyright @c the odin project 2021</div>
